changes to translate from Serge
git-svn-id: https://enrich-ege.svn.sourceforge.net/svnroot/enrich-ege/project/oxgarage@74 4830b8e0-8a90-4283-b7f1-a7364ff6f0ab

--- a/ege-webclient/src/main/webapp/helpFiles-fr/convertFrom.html
+++ b/ege-webclient/src/main/webapp/helpFiles-fr/convertFrom.html
@@ -1,4 +1,3 @@
 <div class="helpText">
     <h2 xml:lang="fr">Format d'entree</h2>
-    <p xml:lang="fr">Il faut d'abord sélectionner une des catégories de document indiquée (Presentation documents, Spreadsheet documents, Text documents). Ensuite, sélectionnez un des formats associés à cette categorie dans la liste qui s' affiche. L'extension du nom de fichier pourrait vous signaller son format. Sinon vous devriez vous en informer au près de l'originateur du fichier, ou sur l'Internet.</p> 
-</div>
+    <p xml:lang="fr">Il faut d'abord sélectionner une des catégories de document indiquée (fichiers Texte, fichiers Présentation, fichiers Classeurs). Ensuite, sélectionnez un des formats associés à cette catégorie dans la liste qui s'affiche. L'extension du nom de fichier peut vous aider à deviner son format. Sinon vous devriez vous en informer auprès du fournisseur du fichier, ou sur Internet.</p> </div>
